# StarBotDataSource

./: README.md  pyproject.toml
starbot_datasource/: __init__.py
starbot_datasource/core/: config.py  datasource.py  event.py  model.py
starbot_datasource/exception/: DataSourceException.py
