[tool.poetry]
name = "starbot-bilibili-datasource"
version = "1.0.0"
description = "StarBot 推送配置数据源"
keywords = ["starbot", "bilibili", "bot"]
license = "AGPL-3.0-only"
authors = ["Starlwr <lwr1104@qq.com>"]
readme = "README.md"
repository = "https://github.com/Starlwr/StarBotDataSource"
packages = [{ include = "starbot_datasource" }]

[tool.poetry.dependencies]
python = "^3.10"
starbot-executor = "^1.3.0"
pydantic = "^2.5.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
